Quorum3/Library/Tests/TemplatingGenerated/Pass/TwoTypePriPriBoolObjRetText.quorum
class Main
    action Main
        Yoda<Text, Text, Boolean> yoda
        Boolean y = yoda:useForce("green", "green")
        output "passed"
     end
end
