Quorum3/Library/Tests/TemplatingGenerated/Fail/TwoTypeObjPriTextObjRetBooleanFail.quorum
class Main
    action Main
        Yoda<Boolean, Boolean, Text> yoda
        boolean y = yoda(true, true, true)
     end
end
